fixed overflow hidden bug in safari

--- a/examples/blogging-platform/styles/globals.css
+++ b/examples/blogging-platform/styles/globals.css
@@ -3,3 +3,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .overflow-hidden {
+    -webkit-mask-image: -webkit-radial-gradient(white, black);
+  }
+}
